ci(base-banking-system): Resolving some warnings